# justext

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
rpmdude_build/: rpmdude_build.sh
rpmdude_build/SOURCES/: justext.desktop
rpmdude_build/SPECS/: justext.spec
src/: config.rs  main.rs
ui/: app.slint
